--- a/ansible.yml
+++ b/ansible.yml
@@ -2,5 +2,4 @@
 - hosts: test
   tasks:
     - name: create new container
-      shell: docker container run -itd --name mydockercontainer -p 9000:80
-        shyam178/docker-project2
+      shell: docker container run -itd --name mydockercontainer -p 9000:80 shyam178/docker-project2
